# ReadmeGen

./: .gitignore  =2.0.0  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  create_demo_gif.sh  demo_60_second_experience.sh  pyproject.toml  test_deterministic_output.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md
readme_generator/: cli.py  templates.py
readme_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
readmegen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli_workflow.py  test_error_handling.py  test_generator.py  test_template_rendering.py
